@startuml
skinparam classAttributeIconSize 0

package model {
    class TemperatureData {
        - temperatures: List<Double>
        + addTemp(temp: double): void
        + getAllTemps(): List<Double>
        + isEmpty(): boolean
        + size(): int
    }
}

package observer {
    interface DataObserver {
        + update(data: TemperatureData): void
    }

    class DataSubject {
        - observers: List<DataObserver>
        - temperatureData: TemperatureData
        + attach(observer: DataObserver): void
        + detach(observer: DataObserver): void
        + notifyObservers(): void
        + setData(data: TemperatureData): void
        + getData(): TemperatureData
        + getObserverCount(): int
    }

    class DisplayObserver {
        - name: String
        + DisplayObserver()
        + update(data: TemperatureData): void
    }

    class AnalysisObserver {
        - name: String
        - analyzer: TemperatureAnalyzer
        + AnalysisObserver()
        + update(data: TemperatureData): void
    }

    class StorageObserver {
        - name: String
        - filePath: String
        + StorageObserver(filePath: String)
        + StorageObserver()
        + update(data: TemperatureData): void
    }

    DataSubject o-- DataObserver
    DataObserver <|.. DisplayObserver
    DataObserver <|.. AnalysisObserver
    DataObserver <|.. StorageObserver
}

package strategy {
    interface AnalysisStrategy {
        + findMax(data: TemperatureData): double
        + findMin(data: TemperatureData): double
        + getAbnormalTemps(data: TemperatureData): List<Double>
    }
}

package context {
    class TemperatureAnalyzer {
        - strategy: AnalysisStrategy
        + TemperatureAnalyzer(strategy: AnalysisStrategy)
        + setStrategy(strategy: AnalysisStrategy): void
        + findMax(data: TemperatureData): double
        + findMin(data: TemperatureData): double
        + getAbnormalTemps(data: TemperatureData): List<Double>
    }
}

AnalysisObserver --> TemperatureAnalyzer

@enduml
